updated Projektverlauf bis aktueller Stand

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -553,15 +553,14 @@ um anschließend live den Markdown Code zu rendern.
 Eine Vorlage für ein solches Keyboard fanden wir mit dem Mottie Virtual Keyboard\footnote{\url{https://mottie.github.io/Keyboard/}}.
 Erst nach der Aufbereitung der Zeichentabelle und dem Hinzufügen der Programmquellen für das Keyboard fanden wir die Anzeige von weit mehr als 500 Symbolen\footnote{Vergleiche MUFI Character Database\\\url{http://www.abdn.ac.uk/skaldic/db.php?if=mufi&range=AlphPresForm&table=mufi_char}} auf einem virtuellen Keyboard sehr unpraktisch und 
 entschieden uns daher für die Implementierung einer Tag-Suche auf Kategorien von Symbolen, so dass das gewünschte Symbol wesentlich leichter für Nutzer zu finden ist.\\
-Mit dem Ende der Vorlesungszeit intensivierten wir die Implementierungsarbeiten am Projekt und konnten schnell 
-%***An diesem Punkt hören die Notes von Jakob auf.
-%Ich weiß nicht, was seither alles passiert ist.
-%Ich erinnere mich noch an weitere Vagrant-Probleme?
-%Hier muss eventuell noch mit eurer Hilfe nachgebessert werden***
-
-Damit überschneiden sich der zweite und dritte Meilenstein zeitlich, was besondere organisatorische Fähigkeiten erforderte.
+Mit dem Ende der Vorlesungszeit intensivierten wir die Implementierungsarbeiten am Projekt und konnten schnell weitere Teile des zweiten Meilensteins abschließen. 
+In dieser Phase des Projektes bereitete uns der Vagrant Container unerwartete Probleme. 
+Aufgrund eines Defekts musste ein neuer Laptop eingerichtet werden, welcher in der Konfigurationsebene des BIOS zunächst keine Virtualisierung unterstütze.
+Aus diesem Grund verzögerte sich die Entwicklung von OpenLayers und überschnitt sich zeitlich mit dem dritten Meilenstein, 
+was besondere organisatorische Fähigkeiten erforderte.
 Die Organisation des Projektes mit Hilfe von sog. ,,issues'' im GitHub half uns, den Überblick im Team zu bewahren.\\
-Zu den issues des dritten Meilensteins gehörte die Verbesserung der Profilseite und das Handling der Transkriptionen, also das Votingsystem, die Speicherung und die Veröffentlichung der von den Nutzern als gut bewerteten Transkriptionen auf GitHub.
+Zu den issues des dritten Meilensteins gehörte die Verbesserung der Profilseite und das Handling der Transkriptionen, 
+also das Votingsystem, die Speicherung und die Veröffentlichung der von den Nutzern als gut bewerteten Transkriptionen auf GitHub.
 
 Wir beendeten die Arbeit am Projekt mit folgenden Offenen issues
 Der aktuelle Stand beinhaltet
