Text zum dritten Meilenstein, projektbericht

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -537,11 +537,6 @@ Mit diesem war es bereits möglich, sich über GitHub als Nutzer zu registrieren
 auf einer Grafik Areas of Interest zu markieren, die jedoch noch nicht gespeichert wurden. 
 Zusätzlich dazu war im Hintergrund schon die Verbindung zu Omeka eingerichtet und es war möglich, 
 Daten zu crawlen und in einer Liste zusammenzufassen. Der gesamte Prototyp lief in einem Vagrant Container.\\
-
-%später nochmal was zu open layers, welches Problem hatten wir
-%Verlauf des mufi-input systems
-%@jakob: hier einstiegspunkt
-%erster Meilenstein, Zwischenstand
 Direkt im Anschluss daran begannen wir mit der Arbeit am zweiten Meilenstein. 
 Dieser umfasste hauptsächlich die Umsetzung einer Eingabemaske für Mufi-Symbole, die Programmierung des Votingsystems für die Areas of Interest sowie die Umsetzung des Datenflusses mithilfe von OpenLayers.
 In diesem Zusammenhang bekamen wir noch die Anforderung, die Areas of Interest in Kategorien zu sortieren. Diese sollten ,,Main Text'', ,,Marginal Text'', ,,Image'', ,,Mathematical Figure'', ,,Other (Freetext description)'', ,,Initials'' und ,,Title'' 
@@ -559,13 +554,10 @@ Aufgrund eines Defekts musste ein neuer Laptop eingerichtet werden, welcher in d
 Aus diesem Grund verzögerte sich die Entwicklung von OpenLayers und überschnitt sich zeitlich mit dem dritten Meilenstein, 
 was besondere organisatorische Fähigkeiten erforderte.
 Die Organisation des Projektes mit Hilfe von sog. ,,issues'' im GitHub half uns, den Überblick im Team zu bewahren.\\
-Zu den issues des dritten Meilensteins gehörte die Verbesserung der Profilseite und das Handling der Transkriptionen, 
-also das Votingsystem, die Speicherung und die Veröffentlichung der von den Nutzern als gut bewerteten Transkriptionen auf GitHub.
-
-Wir beendeten die Arbeit am Projekt mit folgenden Offenen issues
-Der aktuelle Stand beinhaltet
-%dritter meilenstein
-
+Zu den issues des dritten Meilensteins gehörte die Verbesserung der Profilseite und das Handling der Transkriptionen.
+Dies beinhaltet das Votingsystem, sowie die Speicherung und die Veröffentlichung der von den Nutzern als gut bewerteten Transkriptionen auf GitHub.\\
+An diesen Issues arbeiteten wir bis zum Ende des Wintersemesters, und beendeten die Arbeit am Projekt mit einer Liste an offenen Issues,
+die unter \url{https://github.com/runjak/TranscriptionDesk/issues} eingesehen werden können.
 
 \section{Zusammenfassung und Ausblick}
 
