--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -42,8 +42,6 @@ stehen unter MIT Lizenz und sind digital veröffentlicht unter \url{https://gith
 \tableofcontents
 \newpage
 
-%omeka-login: für jeden Scan ist die Herkunft mit drin
-%CCBI NDNC für die meisten
 \section{Einleitung}
 Das Projekt TranscriptionDesk wurde im Zuge des Moduls ,,Citizen Science'' an der Universität Leipzig im Sommerstemester 2015 durchgeführt.
 Das Thema umfasste die Konzeption und Entwicklung einer Webplattform nach dem Paradigma der Citizen Science,
@@ -293,6 +291,7 @@ ebenso wie Teilnehmer, die einfach ein persönliches, nicht-wissenschaftliches I
 Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen, welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
 
 \section{Produktfunktion}
+%@Robert: bitte Auflistung wie Lastenheft kurz
 Dass Nutzer sich planmäßig auf unterschiedlichen Wegen an der Arbeit beteiligen können sollten wurde bereits in unseren Zielen angerissen.
 An dieser Stelle sollten wir erwähnen,%ohne sollten FIXME
 dass unsere anfänglichen Ziele mit dem aktuellen Arbeitsstand bei weitem nicht übereinstimmen.
@@ -336,10 +335,6 @@ und müssten dementsprechend nur noch in der Maske getrennt werden, um wie anged
 Das ist bisher alles, was an für den Nutzer sichtbaren, beziehungsweise für den Nutzer interessanten Funktionen implementiert wurde.
 Abweichungen von den Zielen sind mitunter durch unerwartete Verzögerungen beim Aufsetzen der von uns verwendeten Technologien begründet.
 Durch die zeitliche Begrenzung des Projektes werden entsprechende offene Baustellen von unserer Seite her leider offen bleiben.
-
-%Wie können Nutzer an der Seite teilhaben?
-%Wie registrieren sich Nutzer?
-%Welche Arbeitsabläufe gibt es?
 
 \section{Architektur}
 \subsection{Gesamtübersicht}
@@ -575,10 +570,18 @@ was besondere organisatorische Fähigkeiten erforderte.
 Die Organisation des Projektes mit Hilfe von sog. ,,issues'' im GitHub half uns, den Überblick im Team zu bewahren.\\
 Zu den issues des dritten Meilensteins gehörte die Verbesserung der Profilseite und das Handling der Transkriptionen.
 Dies beinhaltet das Votingsystem, sowie die Speicherung und die Veröffentlichung der von den Nutzern als gut bewerteten Transkriptionen auf GitHub.\\
-An diesen Issues arbeiteten wir bis zum Ende des Wintersemesters, und beendeten die Arbeit am Projekt mit einer Liste an offenen Issues,
+An diesen Issues arbeiteten wir bis zum Ende des Wintersemesters und beendeten die Arbeit am Projekt mit einer Liste an offenen Issues,
 die unter \url{https://github.com/runjak/TranscriptionDesk/issues} eingesehen werden können.
 
 \section{Zusammenfassung und Ausblick}
+- Grund für die Wahl des Projektes
+- Beschreibung gemischtes Team
+- Reflektion Herangehensweise, agile Softwareentwicklung
+- GitHub und dessen Vorzüge loben
+- wichtigkeit eines einheitlichen Setups im Team
+- dynamisches eingehen auf neue Anforderungen und Zwischenrecherchen
+- Ausblick auf Transkription (bereits auf Seite verlinkt, soll größtes blablubb werden)
+
 
 \section*{Quellen}
   \printbibliography[%
