update entry point for recap

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -668,7 +668,11 @@ An diesen Issues arbeiteten wir bis zum Ende des Wintersemesters und beendeten d
 die unter \url{https://github.com/runjak/TranscriptionDesk/issues} eingesehen werden können.
 
 \section{Zusammenfassung und Ausblick}
-- Grund für die Wahl des Projektes
+Insbesondere diese Organisationsform über GitHub und das Issue-System ist eines der Dinge, welches wir positiv aus dem Projekt für zukünftige Arbeiten mitnehmen.
+Wir kennen aus der Informatik die Theorie der agilen Entwicklungsmodelle sowie ihre Stärken und Schwächen, weshalb es für uns immer wieder spannend ist, diese im praktischen Einsatz zu erleben.
+Aufgrund dieser Möglichkeiten und unseren Vorkenntnissen im Bereich der Webentwicklung fiel unsere Wahl auf das TranskriptionDesk Projekt.
+Zwar besaßen wir kaum fachliche Vorkenntnisse in Bezug auf die Datenbasis und beherrschen die lateinische Sprache nicht, doch an dieser Stelle konnte uns Herr Koentges das notwendige Fachwissen und entsprechende Dokumentation vermitteln.\\
+Unser Team selbst war sehr gemischt aus verschiedenen Bereichen der Informatik.
 - Beschreibung gemischtes Team
 - Reflektion Herangehensweise, agile Softwareentwicklung
 - GitHub und dessen Vorzüge loben
