Small fix to Main.tex

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -281,9 +281,9 @@ Im Umkehrschluss bedeutet das aber auch, dass man die Ergebnisse anderer Nutzer 
 Jeder, der am Projekt teilnimmt, tut dies mit großer Sicherheit aus dem Grund,
 dass er ein gewisses Interesse und Wissen z.B. in dem Gebiet der lateinischen Handschriften hat, und dieses teilen oder vergrößern möchte.
 Unsere Plattform bietet diesen zwei Interessentengruppen genau das.
-Auch wenn ein Nutzer kaum Vorwissen im Transkribieren oder in Bezug auf lateinischer Schrift hat, kann er viel zum Projekt beitragen,
+Auch wenn ein Nutzer kaum Vorwissen im Transkribieren oder in Bezug auf lateinische Schrift hat, kann er viel zum Projekt beitragen,
 im Verlauf dieser Arbeit sich dieses Wissen aneignen und im gleichen Atemzug anwenden.
-Außerdem schaffen wir damit die Möglichkeit, sich in einer interessenbezogenen Gemeinschaft anzuschließen und innerhalb dieser austauschen zu können.
+Außerdem schaffen wir damit die Möglichkeit, sich einer interessenbezogenen Gemeinschaft anzuschließen und innerhalb dieser austauschen zu können.
 
 Aus diesen Überlegungen abgeleitet erwarten wir, dass der größte Teil unserer Teilnehmer sich aus einem Publikum zusammensetzt,
 das zumindest einen Bezug zur Wissenschaft und der lateinischen Sprache hat.
