Small adjustment to main.tex

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -26,9 +26,6 @@
 %\date{März 2015}
 
 \begin{document}
-%TODO: Stets zwei-drei Sätze Kapiteleinleitung beachten, englische Fachbegriffe auf ein Minimum reduzieren und nicht mehrere Begriffe für eine Semantik nutzen
-% z.B. Nutzer statt User, Projekt statt Praktikum
-%TODO genaue Beschreibung des Projektes erfolgt erst nach der analyse und Einordnung
 
 \maketitle
 
@@ -478,8 +475,7 @@ das mit Systemd\footnote{
 läuft. Systemd ist ein neuerer System- und Servicemanager für Linux,
 den wir uns im speziellen zu nutze machen,
 um mittels Timer in regelmäßigen Zeitabständen
-einen PHP Script auszuführen,
-der Daten von Omeka sammelt.
+ein PHP Script auszuführen, das Daten von Omeka sammelt.
 Innerhalb unseres Vagrantsetups betreiben wir einen LAMP-Stack\footnote{\url{https://en.wikipedia.org/wiki/LAMP_(software_bundle)}},
 das heißt, dass wir die weit verbreitete Kombination von Linux, Apache2\footnote{
     \url{https://httpd.apache.org/}}, MySQL\footnote{
