Added short introduction in "Produktfunktionen".

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -289,7 +289,7 @@ ebenso wie Teilnehmer, die einfach ein persönliches, nicht-wissenschaftliches I
 Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen, welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
 
 \section{Produktfunktion}
-
+Im nachfolgenden werden die einzelnen Pflichtfunktionen und weitere nichtfunktionale Anforderungen des Projektes aufgelistet. Diese deklarieren, die Funktionalität des gesamten Projektes. 
 \subsection{Pflichtfunktionen}
 \textbf{/LF100/ Geschäftsprozess:} Erstellen der Webseite
 \begin{funcD}
