small changes to ch.4

--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -289,8 +289,9 @@ ebenso wie Teilnehmer, die einfach ein persönliches, nicht-wissenschaftliches I
 Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen, welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
 
 \section{Produktfunktion}
-Im nachfolgenden werden die einzelnen Pflichtfunktionen und weitere nichtfunktionale Anforderungen des Projektes aufgelistet. Diese deklarieren, die Funktionalität des gesamten Projektes. 
-\subsection{Pflichtfunktionen}
+In diesem Kapitel soll eine nach den Methoden der Softwaretechnik übliche Auflistung der Produktfunktionen gegeben werden. 
+Sie untergliedert sich in Pflichtfunktionen und nichtfunktionale Anforderungen.
+\subsection*{Pflichtfunktionen}
 \textbf{/LF100/ Geschäftsprozess:} Erstellen der Webseite
 \begin{funcD}
     \textbf{Akteur:} Benutzer \vspace{.1cm}\\
@@ -417,7 +418,7 @@ Im nachfolgenden werden die einzelnen Pflichtfunktionen und weitere nichtfunktio
     \textbf{Beschreibung:} Mittels einer Schaltfläche kann der Benutzer ein Spezialzeichen aus der Medieval Unicode Font Initiative Datenbank auswählen um ein etwaiges spezielles Symbol in dem Objekt zu beschreiben. 
 \end{funcD}
 
-\subsection{Nichtfunktionale Anforderungen}
+\subsection*{Nichtfunktionale Anforderungen}
 \textbf{/NF100/} Selbsterklärende Benutzeroberfläche
 \begin{funcD}
     \textbf{Beschreibung:} Die gesamte Webseite besitzt einen simplen, zugänglichen und vor allem selbsterklärenden Aufbau. 
